--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Web application to avoid malicious file uploading in SFMC",
   "main": "app.js",
   "scripts": {
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alfredo Ledesma",
